# yield-aggregator

./: .gitignore  Cargo.toml  Makefile  NOTICE  README.md  build.sh  init_relayer.sh  upload_to_chain.sh
artifacts/: checksums.txt  checksums_intermediate.txt  yield_optimizer.wasm
contracts/umee/: Cargo.toml
contracts/umee/schema/: yield-optimizer.json
contracts/umee/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  queries.rs  state.rs
contracts/yield-optimizer/: Cargo.toml  build.sh  uni-5.json  upload_to_chain.sh
contracts/yield-optimizer/examples/: schema.rs
contracts/yield-optimizer/schema/: execute_msg.json  query_msg.json  yield-optimizer.json
contracts/yield-optimizer/src/: coin_helpers.rs  contract.rs  error.rs  lib.rs  msg.rs  queries.rs  state.rs  test.rs
examples/: schema.rs
go-relay/config/: config.yaml
relayer/: app.yaml  registry.yaml
schema/: execute_msg.json  query_msg.json
src/: coin_helpers.rs  contract.rs  denom_utils.rs  error.rs  lib.rs  msg.rs  queries.rs  state.rs
