[package]
name = "umee"
version = "0.1.0"
authors = ["Robert Zaremba <robert@zaremba.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
cosmwasm-std = { version = "1.1.3", features = ["stargate"]}
cosmwasm-storage = "1.1.0"
cw-storage-plus = "0.15.1"
cw2 = "0.15.1"
cw20 = { version = "0.15.1" }
cw20-base = { version = "0.15.1", features = ["library"] }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.37" }
cosmwasm-schema = "1.1.3"
cw-denom = { version = "*", path = "../../packages/cw-denom" }
cw-utils = "0.15.1"


[dev-dependencies]
cw-multi-test = "0.15.1"


[alias]
wasm = "build --release --target wasm32-unknown-unknown"
wasm-debug = "build --target wasm32-unknown-unknown"
unit-test = "test --lib"
integration-test = "test --test integration"
schema = "run --bin schema"
