[package]
name = "yield-optimizer"
version = "0.1.0"
authors = ["Reece Williams <reecepbcups@gmail.com>", "Eliseo", "Sam B.", "Dan Magic", "Flash Gordon", "Robert Zaremba <robert@zaremba.ch>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
cosmwasm-std = { version = "1.1.3", features = ["stargate"]}
cosmwasm-storage = "1.1.0"
cw-storage-plus = "0.15.1"
cw2 = "0.15.1"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.37" }
cosmwasm-schema = "1.1.3"


[dev-dependencies]
cw-multi-test = "0.15.1"


[alias]
wasm = "build --release --target wasm32-unknown-unknown"
wasm-debug = "build --target wasm32-unknown-unknown"
unit-test = "test --lib"
integration-test = "test --test integration"
schema = "run --bin schema"
